# test_service

./: .flake8  .pre-commit-config.yaml  README.md  example.env  pyproject.toml  requirements.txt
backend/api/v1/: mixins.py  serializers.py  urls.py  views.py
backend/core/: settings.py
backend/picture/: admin.py  models.py
backend/picture/migrations/: 0001_initial.py
backend/question/: admin.py  models.py
backend/question/migrations/: 0001_initial.py
backend/test/: exceptions.py  jservice.py  test.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: pictures.js
frontend/src/components/: CreatePicture.vue  PictureList.vue
frontend/src/store/: index.js  mutation-types.js
test/: exceptions.py  jservice.py  test.py
